<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/widget_background"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/appwidget_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/next_class"
        android:textColor="@color/appWidgetTextColor"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/appwidget_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_10_00_am"
        android:textColor="@color/appWidgetTextColor"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/appwidget_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/math"
        android:textColor="@color/appWidgetTextColor"
        android:textSize="16sp" />

</LinearLayout>
